<resources>
    <string name="app_name">devicetest tool</string>
    <string name="test_success_info">All test success!</string>
    <string name="VibrationTitle">Vibration Test</string>
    <string name="VibrationContent">Is the device vibrating?</string>
    <string name="devicetest">Device Test</string>
    <string name="stresstest">Stress Test</string>
    <string name="SpeakerTitle">Speak Test</string>
    <string name="SpeakerContent">Can you hear the voice?</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="SpeakerTip">Is speaker sounding? yes: pass, no: fail</string>
    <string name="LeftMsgBase">Left: whether only the left channel is playing music?</string>
    <string name="RightMsgBase">Right: whether only the right channel is playing music?</string>
    <string name="LeftMsg">Left: how many times have you heard？\n Please click below button.</string>
    <string name="RightMsg">Right: how many times have you heard？\n Please click below button.</string>
    <string name="BrightnessTitle">Brightness Test</string>
    <string name="BrightnessTitleStop">Stop brightness test</string>
    <string name="BrightnessSubTitle">Please observe the change of brightness.</string>
    <string name="BrightnessPassCode">Pass Code:</string>
    <string name="BrightnessMessage">Please choose the pass code!</string>
    <string name="BluetoothTitle">Bluetooth Test</string>
    <string name="BluetoothSubTitle">Find bluetooth device:</string>
    <string name="BluetoothAdapterFail">Find bluetooth device failed!</string>
    <string name="BluetoothScan">Scanning devices</string>
    <string name="BluetoothInit">Please wait fow the device initializing.</string>
    <string name="BluetoothOpenF">Fail to open bluetooth!</string>
    <string name="BluetoothFindF">Fail to find devices.</string>
    <string name="BluetoothFindS">Found devices.\n Pass!</string>
    <string name="bt_pass_info">PASS!</string>
    <string name="CameraTitle">Camera Test</string>
    <string name="CameratextMsgText">Please click the screen to open camera</string>
    <string name="CameraFlashTitle">Camera and Flash Test</string>
    <string name="CameraFlashtextFront">Please click screen to open front camera,then click preview screen to take photo</string>
    <string name="CameraFlashtextBack">Please click screen to open back camera,then click preview screen to take photo with flash on</string>
    <string name="CameraFlashtextOk">Test end</string>
    <string name="GpsTestTitle">Gps C/No Test</string>
    <string name="GpsTestSubTitle">Please observe device.</string>
    <string name="GpsTestResult">Please wait fow the device initializing.</string>
    <string name="GpsLocationTestTitle">Gps Location Test</string>
    <string name="GpsLocationTestSubTitle">Please observe the device.</string>
    <string name="GpsLocationTestResult">Please wait fow the device initializing.</string>
    <string name="gpstextx">X axis C/No:</string>
    <string name="gpstexty">Y axis C/No:</string>
    <string name="gpstestx">Test X axis</string>
    <string name="gpstesty">Test Y axis</string>
        <string name="gps_satellites">Satellites</string>
        <string name="gps_satellites_passed">Passed Satellites:</string>
        <string name="gps_test_time">Time:</string>
        <string name="gps_wait_ttff">Wait for TTFF</string>
        <string name="key_test_vol_increase">VOLUME+</string>
        <string name="key_test_vol_decrease">VOLUME+</string>
        <string name="sim_test_cannot_get_imei1">"Can't get IMSI1"</string>
        <string name="sim_test_cannot_get_imei2">"Can't get IMSI2"</string>
    <string name="HeadsetMicTitle">Headset Mic Test</string>
    <string name="HeadsetMicSubTitle">Please speak to the mic, then check playback with headset.</string>
    <string name="HeadsetMicPlay">Please press headset button to replay.</string>
    <string name="HeadsetMicSubTitleForLenove">Please speak to the mic, volume should be over 1/3.</string>
    <string name="LcdTestTitle">Lcd Test</string>
    <string name="LcdTestStart">Click the screen to test.</string>
    <string name="PhoneMictTitle">Sound record/play test</string>
    <string name="PhoneMicSubTitle">Please speak, the playback would be after 3 seconds.</string>
    <string name="PhoneMicSubTitleForLenove">Please speak to the mic, volume should be over 1/3.</string>
    <string name="PhoneMicEffective">Recording Effective!</string>
    <string name="record_error">Encount error when record.</string>
    <string name="startRecord">Start recording</string>
    <string name="PowertestTitle">Battery Test</string>
    <string name="PowertestSubTitle"> Power Test</string>
    <string name="AcUnplug">Ac Unplug:</string>
    <string name="AcPlugin">Ac Plugin:</string>
    <string name="ChargeState">Battery State</string>
    <string name="Voltage">Battery Voltage:</string>
    <string name="Capacity">Battery Capacity:</string>
    <string name="Plug">Battery Plug:</string>
    <string name="SdCardTitle">SD Card Test</string>
    <string name="SdCardSubTitle">Please observe the device</string>
    <string name="SdCardFail">Fail! Cannot find the SD Card</string>
    <string name="SdCardFind">SD card found, memory: </string>
    <string name="TouchtestTitle">Touch Test</string>
    <string name="TouchtestSubTitle">Control buttons will show after double click screen.</string>
    <string name="VersionTitle">Version Test</string>
    <string name="Firmwareversion">Firmware version:</string>
    <string name="Kernelversion">Kernel version:</string>
    <string name="Basebandversion">Baseband version:</string>
    <string name="Buildversion">Build version:</string>
    <string name="VibrationTest">Vibration Test</string>
    <string name="Wifitest">Wifi Test</string>
    <string name="WifiSubText">Please check the device.</string>
    <string name="WifiResultText">Please wait for the device initialize</string>
    <string name="WifiError">Wifi test fail!</string>
    <string name="WifiFind">Found Wifi-</string>
    <string name="WifiTry">Trying to connect to </string>
    <string name="WifiConnect">Connected to </string>
    <string name="WifiConnectErr">Can\'t find any router to connect!</string>
    <string name="WifiPing">Ping Test : </string>
    <string name="WifiHttp">Http Test: </string>
    <string name="WifiSignal3">Wifi signal(strong)</string>
    <string name="WifiSignal2">Wifi signal(middle)</string>
    <string name="WifiSignal1">Wifi signal(low)</string>
    <string name="WifiSignal0">Wifi signal(bad)</string>
    <string name="wififindtest">Wifi found</string>
    <string name="wifi_pass_info">PASS!</string>
    <string name="SensorTest">Sensor Test</string>
    <string name="num200">200</string>
    <string name="gsensorvalue">gsensor value: </string>
    <string name="Accelerometer">=== Accelerometer === </string>
    <string name="name_acc"> Name:</string>
    <string name="vendor_acc"> Vendor:</string>
    <string name="version_acc"> Version:</string>
    <string name="maxRange_acc"> Max Range:</string>
    <string name="resolution_acc"> Resolution:</string>
    <string name="power_acc"> Power:</string>
    <string name="sensor_x">x:</string>
    <string name="sensor_y">y:</string>
    <string name="sensor_z">z:</string>
    <string name="Orientation">=== Orientation === </string>
    <string name="Azimuth"> Azimuth angle:</string>
    <string name="Pitch"> Pitch:</string>
    <string name="Roll"> Roll:</string>
    <string name="Light">=== Light === </string>
    <string name="lightvalue">Light:</string>
    <string name="Proximity">=== Proximity === </string>
    <string name="Magnetic_Field">=== Magnetic_Field === </string>
    <string name="Temperature">=== Temperature === </string>
    <string name="Gsensor_x">x up(x:9,y:0,z:0)</string>
    <string name="Gsensor_y">y up(x:0,y:9,z:0)</string>
    <string name="Gsensor_z">z up(x:0,y:0,z:9)</string>
    <string name="Gsensor_xup">x up(x:5)</string>
    <string name="Gsensor_yup">y up(y:5)</string>
    <string name="Gsensor_zup">z up(x:0,y:0,z:9)</string>
    <string name="Gsensor_xdown">x down(x:-5)</string>
    <string name="Gsensor_ydown">y down(y:-5)</string>
    <string name="Gsensor_zdown">z down(z:-5)</string>
    <string name="Gsensor_screen_up_prompt">The arrow pointing to the up direction of device</string>
    <string name="GSensor_test_prompt">Current value of x、y、z:</string>
    <string name="GSensor_test_prompt2">the direction of device:</string>
    <string name="GsensorTest">Gsensor Test</string>
    <string name="MsensorTest">Msensor Test</string>
    <string name="LightsensorTest">Light Sensor Test</string>
    <string name="KeyboardTestTitle">Keyboard Test</string>
    <string name="KeyboardTestSubTitle">Please test all keys</string>
    <string name="VolUp">Volume+</string>
    <string name="VolDown">Volume-</string>
    <string name="Back">Back</string>
    <string name="Menu">Menu</string>
    <string name="Home">Home</string>
    <string name="FlashLightTest">FlashLight Test</string>
    <string name="FlashLightTestSubText">Please observe the flashlight of your device when
        you touch the buttons</string>
    <string name="OpenFlashLight">Open Flash Light</string>
    <string name="ShutDownFlashLight">Shut Down Flash Light</string>
    <string name="SimCardTestTitle">Sim Card Test</string>
    <string name="MrioUSBTitle"> USB Test</string>
    <string name="MrioUSBsubTitle">Please plug in USB and wait.</string>
    <string name="usbplugin1">Plug in USB1:</string>
    <string name="usbplugin2">Plug in USB2:</string>
    <string name="usbplugin3">Plug in USB3:</string>
    <string name="usbplugin4">Plug in USB4:</string>
    <string name="FMRadioTestTitle">FM Radio Test</string>
    <string name="FMRadioTextMsgText">Please click the screen to open FM Radio</string>
    <string name="CirTestTitle">Cir Test</string>
    <string name="CirSend">Send</string>
    <string name="CpuInfo">CPU info</string>
    <string name="MemInfo">MEM info</string>
    <string name="DmiInfo">DMI info</string>
    <string name="IrdaTestTitle">IrDA Test</string>
    <string name="SirSend">Sir Send</string>
    <string name="SirReceive">Sir Receive</string>
    <string name="SirTest">Sir Test</string>
    <string name="btnPassText">Pass</string>
    <string name="btnFailText">Fail</string>
    <string name="btnSkipText">Skip</string>
    <string name="btnRetestText">Retest</string>
    <string name="Cancel">Cancel</string>
    <string name="Clear">Clear</string>
    <string name="Uninstall">Uninstall</string>
    <string name="Send">Send log</string>
    <string name="Recovery">Recovery</string>
    <string name="testall">Test All</string>
    <string name="btn_stop">Stop</string>
    <string name="sms_num">Number：</string>
    <string name="sms_content">Content：</string>
    <string name="btn_sent">Send</string>
    <string name="SmsSendTestTitle">Sms Send Test</string>
    <string name="send_status">Sms send result:  %1$d success, %2$d failed.</string>
    <string name="Result">Examine result</string>
    <string name="Ptest">Enter ptest mode</string>
    <string name="gti_on">acm on</string>
    <string name="gti_off">acm off</string>
    <string name="TestResult">Last Result</string>
    <string name="CouplingTestTitle">Coupling Test</string>
    <string name="coupling_power">Power(dBm): </string>
    <string name="default_power">23</string>
    <string name="band1">Band 1 UL-UARFCN 9750</string>
    <string name="band2">Band 2 UL-UARFCN 9400</string>
    <string name="band5">Band 5 UL-UARFCN 2800</string>
    <string name="band8">Band 8 UL-UARFCN 2800</string>
    <string name="start_coupling_test">Start</string>
    <string name="stop_coupling_test">Stop</string>
    <string name="gps_test">GPS Test</string>
    <string name="test_fail_unknow">Test failed and unknow</string>
    <string name="test_all">Test all</string>
</resources>