<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/CouplingTestTitle"
        android:textSize="24sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/settingLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/coupling_power"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/oupling_power"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="24sp"
            android:text="@string/default_power" />
    </LinearLayout>

    <RadioGroup android:id="@+id/choose_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingLayout"
        android:orientation="vertical">
        <RadioButton android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/band1"
            android:text="@string/band1"
            android:checked="true" />
        <RadioButton android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/band2"
            android:text="@string/band2"/>
        <RadioButton android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/band5"
            android:text="@string/band5"/>
        <RadioButton android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/band8"
            android:text="@string/band8"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_group"
        android:orientation="horizontal">
        <Button android:id="@+id/btn_start_coupling_test"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/start_coupling_test" />
        <Button android:id="@+id/btn_stop_coupling_test"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/stop_coupling_test"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Pass"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPassText" />

        <Button
            android:id="@+id/btn_Fail"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFailText" />

        <Button
            android:id="@+id/btn_Skip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSkipText" />

        <Button
            android:id="@+id/btn_Retest"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRetestText" />
    </LinearLayout>
</RelativeLayout>