<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dip" 
        android:focusable="true"  
   		android:focusableInTouchMode="true"
   >

        <TextView
            android:id="@+id/SmsSendTestTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:paddingTop="20px"
            android:text="@string/SmsSendTestTitle"
            android:textSize="40sp"
            android:visibility="visible" />



       <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_num" />
        <EditText
            android:id="@+id/phone_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:minLines="1" />
       <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_content" />
        <EditText
            android:id="@+id/msg_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:minLines="2" />
       <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sent"
            android:layout_gravity="center"
            android:paddingRight="20px"
            />

        <TextView
            android:id="@+id/send_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
             android:textSize="20sp"
            android:text="@string/send_status" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Pass"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPassText" />

        <Button
            android:id="@+id/btn_Fail"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFailText" />

        <Button
            android:id="@+id/btn_Skip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSkipText" />

        <Button
            android:id="@+id/btn_Retest"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRetestText" />
    </LinearLayout>

</RelativeLayout>