<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		android:layout_marginLeft="15dip"
        android:layout_marginBottom="25dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Pass"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPassText" 
			android:textSize="15dip"/>

        <Button
            android:id="@+id/btn_Fail"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFailText" 
			android:textSize="15dip"/>

        <Button
            android:id="@+id/btn_Skip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSkipText" />

        <Button
            android:id="@+id/btn_Retest"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRetestText" 
			android:textSize="15dip"/>
    </LinearLayout>

    <com.DeviceTest.view.PointerLocationView
        android:id="@+id/pointerview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/TouchtextTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20px"
        android:text="@string/TouchtestTitle"
        android:textSize="14sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/TouchInfoText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TouchtextTitle"
        android:gravity="center_horizontal"
        android:paddingTop="20px"
        android:text="@string/TouchtestSubTitle"
        android:textSize="14sp"
        android:visibility="visible" />

</RelativeLayout>